本宝宝变成一从更

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <head>
 <meta charset='UTF-8'></meta>
 </head>
-<marquee behavior=scroll direction="left" scrollamount="10">本宝宝</marquee>
+<marquee behavior=scroll direction="left" scrollamount="10">一从更</marquee>
 <marquee behavior=scroll direction="right" scrollamount="10">就爱喝</marquee>
 <marquee behavior=alternate direction="right" scrollamount="10">9刀的奶！</marquee>
 
