--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 </head>
 <marquee behavior=scroll direction="left" scrollamount="10">一从更</marquee>
 <marquee behavior=scroll direction="right" scrollamount="10">就爱喝</marquee>
-<marquee behavior=alternate direction="right" scrollamount="10">9刀的奶！</marquee>
+<marquee behavior=alternate direction="right" scrollamount="10">9刀的奶和千八日草采！</marquee>
 
 
 <h1>Only Buy</h1>     
