新项目进行50%

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
 
 <h1>Only Buy</h1>     
-<font size=100px color=green> 9 dollar milk </font>
+<font size=100px color=green> 9 dollar milk 50% </font>
 <table border=1 width=1200>
 	<tr>
 		<td><a href="https://image.baidu.com/search/detail?ct=503316480&z=0&ipn=d&word=%E4%B9%B0%E4%B9%B0%E4%B9%B0%E8%A1%A8%E6%83%85%E5%8C%85&step_word=&hs=0&pn=4&spn=0&di=77110&pi=0&rn=1&tn=baiduimagedetail&is=0%2C0&istype=0&ie=utf-8&oe=utf-8&in=&cl=2&lm=-1&st=undefined&cs=1320949696%2C2049521350&os=1006782625%2C2464181561&simid=26646727%2C892470503&adpicid=0&lpn=0&ln=936&fr=&fmq=1606364014258_R&fm=&ic=undefined&s=undefined&hd=undefined&latest=undefined&copyright=undefined&se=&sme=&tab=0&width=undefined&height=undefined&face=undefined&ist=&jit=&cg=&bdtype=0&oriquery=&objurl=http%3A%2F%2Fqqpublic.qpic.cn%2Fqq_public%2F0%2F0-2742202914-A9618DF7564611E2D8A9A100292DB476%2F0%3Ffmt%3Djpg%26size%3D50%26h%3D800%26w%3D800%26ppv%3D1.jpg&fromurl=ippr_z2C%24qAzdH3FAzdH3Fh7wtkw5_z%26e3Bqq_z%26e3Bv54AzdH3FfAzdH3Fda8l8damAZPdGUaa%3F6juj6%3Dfrt1j6&gsm=6&rpstart=0&rpnum=0&islist=&querylist=&force=undefined"><img src="l1.jpg"></a></td>	
